crates/math-core/tests/snapshots/error_test__int_double_sub.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\int__3 x dx"
---
Error: '^' or '_' directly followed by '^', '_' or prime.
   ╭─[ <input>:1:6 ]
   │
 1 │ \int__3 x dx
   │      ┬  
   │      ╰── unexpected bound
───╯
